# NaivePyDESSEM

./: MANIFEST.in  README.md  README_append.md  dependencies.py  gera_docs.sh  project_structure.py  project_structure.txt  pyproject.toml  requirements.txt  run_decomp_plots.sh  run_decomp_solvers.sh  run_dessem_plots.sh  run_dessem_solvers.sh  run_mdi_plots.sh  run_mdi_solvers.sh  run_plots.sh  run_solvers.sh  setup.cfg  teste.tex  teste_table.tex
.github/workflows/: ci.yml  docs.yml
docs/: requirements.txt
docs/UserGuide/: ModelsUsed.md  introduction.md  section3.md  userguide.md
docs/source/: MDI.ConnectionBar.rst  MDI.Generator.rst  MDI.Storage.rst  MDI.TransmissionLine.rst  MDI.cli.rst  MDI.rst  NaivePyDECOMP.HydraulicGenerator.rst  NaivePyDECOMP.Storage.rst  NaivePyDECOMP.cli.rst  NaivePyDECOMP.rst  NaivePyDESSEM.ConnectionBar.rst  NaivePyDESSEM.HydraulicGenerator.rst  NaivePyDESSEM.RenewableGenerator.rst  NaivePyDESSEM.Storage.rst  NaivePyDESSEM.ThermalGenerator.rst  NaivePyDESSEM.cli.rst  NaivePyDESSEM.rst  README.md  conf.py  executive_summary.md  index.rst  modules.rst  source_clean.py  topics_on_planning_and_expansion_of_power_systems.md  userguide.md
examples/: exemplo_despacho_hibrido.yaml  trabalho01_caso01_2.yaml  trabalho01_caso02.yaml  trabalho01_caso04.yaml  trabalho01_caso05.yaml
examples/DECOMP/: trabalho02_caso01.yaml  trabalho02_caso02.yaml  trabalho02_caso03.yaml  trabalho02_caso04.yaml
examples/DESSEM/: exemplo_despacho_hibrido.yaml  trabalho01_caso01_1.yaml  trabalho01_caso01_2.yaml  trabalho01_caso01_3.yaml  trabalho01_caso02.yaml  trabalho01_caso03.yaml  trabalho01_caso04.yaml  trabalho01_caso05.yaml
examples/MDI/: trabalho03_ex01.yaml  trabalho03_ex01_anualizado.yaml  trabalho03_ex01_anualizado_alternativo.yaml  trabalho03_ex02.yaml  trabalho03_ex02_anualizado.yaml  trabalho03_ex03.yaml  trabalho03_ex03_anualizado.yaml  trabalho03_ex04.yaml  trabalho03_ex04_anualizado.yaml  trabalho03_ex05.yaml  trabalho03_ex05_anualizado.yaml  trabalho03_ex06.yaml  trabalho03_ex06_anualizado.yaml  trabalho03_ex07.yaml  trabalho03_ex07_anualizado.yaml
examples/TRANSMISSION_LINES/: decomp.yaml  dessem.yaml  mdi-dc-alt.yaml  mdi-dc-corrected.yaml  mdi-dc.yaml  mdi-hybrid-alt.yaml  mdi-hybrid-corrected.yaml  mdi-hybrid.yaml  mdi-transport.yaml
naivepydessem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
relatorios/DECOMP/: arquivos.txt
relatorios/DESSEM/caso_345/: controle_termicas_caso03.tex  controle_termicas_caso04.tex  controle_termicas_caso05.tex  custos_caso03.tex  custos_caso04.tex  custos_caso05.tex  parametros_hidraulicos_caso03.tex  parametros_hidraulicos_caso04.tex  parametros_hidraulicos_caso05.tex  tabela_geracao_caso03.tex  tabela_geracao_caso04.tex  tabela_geracao_caso05.tex
relatorios/TRANSMISSION_LINES/DESSEM/: barras_dessem.tex  controle_termicas_dessem.tex  custos_dessem.tex  parametros_hidraulicos_dessem.tex  tabela_geracao_dessem.tex
resultados/: despacho_caso01_1.csv  despacho_caso01_3.csv  despacho_caso02.csv  despacho_caso03.csv
resultados/DECOMP/: despacho_caso01.csv  despacho_caso01_pddd.csv  despacho_caso01_pddd_alpha.csv  despacho_caso01_pddd_zlimits.csv  despacho_caso01_single_pl.csv  despacho_caso02_pddd.csv  despacho_caso02_pddd_alpha.csv  despacho_caso02_pddd_zlimits.csv  despacho_caso02_single_pl.csv  despacho_caso03_pddd.csv  despacho_caso03_pddd_alpha.csv  despacho_caso03_pddd_zlimits.csv  despacho_caso03_single_pl.csv  despacho_caso04_pddd.csv  despacho_caso04_pddd_alpha.csv  despacho_caso04_pddd_zlimits.csv  despacho_caso04_single_pl.csv
resultados/DESSEM/: despacho_caso01_1.csv  despacho_caso01_2.csv  despacho_caso01_3.csv  despacho_caso02.csv  despacho_caso03.csv  despacho_caso04.csv  despacho_caso05.csv
resultados/MDI/: planejamento_espansao_ex01.csv  planejamento_expansao_ex01.csv  planejamento_expansao_ex01_anualizado.csv  planejamento_expansao_ex01_anualizado_alternativo.csv  planejamento_expansao_ex02.csv  planejamento_expansao_ex02_anualizado.csv  planejamento_expansao_ex03.csv  planejamento_expansao_ex03_anualizado.csv  planejamento_expansao_ex04.csv  planejamento_expansao_ex05.csv  planejamento_expansao_ex05_anualizado.csv  planejamento_expansao_ex06.csv  planejamento_expansao_ex06_anualizado.csv  planejamento_expansao_ex07.csv  planejamento_expansao_ex07_anualizado.csv
resultados/TRANSMISSION_LINES/: .~lock.mdi-transport.csv#  decomp_pddd.csv  decomp_pddd_alpha.csv  decomp_pddd_zlimits.csv  decomp_single_pl.csv  dessem.csv  mdi-dc-alt.csv  mdi-dc-corrected.csv  mdi-dc.csv  mdi-hybrid-alt.csv  mdi-hybrid-corrected.csv  mdi-hybrid.csv  mdi-transport.csv
results/: resultados_exemplos.csv
src/MDI/: Builder.py  DataFrames.py  Formatters.py  ModelCheck.py  ModelFormatters.py  PlotSeries.py  Reporting.py  Solver.py  Utils.py  YAMLLoader.py  __init__.py
src/MDI/ConnectionBar/: ConnectionBarBuilder.py  ConnectionBarConstraints.py  ConnectionBarDataTypes.py  ConnectionBarEquations.py  ConnectionBarVars.py
src/MDI/Generator/: GeneratorBuilder.py  GeneratorConstraints.py  GeneratorDataTypes.py  GeneratorEquations.py  GeneratorObjectives.py  GeneratorVars.py  __init__.py
src/MDI/Storage/: StorageBuilder.py  StorageConstraints.py  StorageDataTypes.py  StorageEquations.py  StorageObjective.py  StorageVars.py  __init__.py
src/MDI/TransmissionLine/: TransmissionLineBuilder.py  TransmissionLineConstraints.py  (+3 more)
src/NaivePyDECOMP/: Builder.py  BuilderPDDD.py  DataFrames.py  Formatters.py  ModelCheck.py  ModelFormatters.py  PDDDMergeModels.py  PlotSeries.py  Reporting.py  Solver.py  SolverPDDD.py  Utils.py  YAMLLoader.py  __init__.py
src/NaivePyDESSEM/: Builder.py  DataFrames.py  Formatters.py  ModelCheck.py  ModelFormatters.py  PlotSeries.py  Reporting.py  Solver.py  Utils.py  YAMLLoader.py  __init__.py
src/naivepydessem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+209 files in other folders)
