[metadata]
name = naivepydessem
version = 0.1.0
description = A modular and pedagogical power dispatch solver based on Pyomo
long_description = file: README.md
long_description_content_type = text/markdown
author = Augusto Mathias Adams
author_email = augusto.adams@ufpr.br
license = GPL v3.0
license_files = LICENSE
url = https://github.com/superflanker/NaivePyDESSEM
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL License
    Intended Audience :: Education
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
python_requires = >=3.8
include_package_data = true

[options.entry_points]
console_scripts =
    pydessem-solve = NaivePyDESSEM.cli.cli:main
    pydessem-plot = NaivePyDESSEM.cli.plot_cli:main 
    pydecomp-solve = NaivePyDECOMP.cli.cli:main
    pydecomp-plot = NaivePyDECOMP.cli.plor_cli:main
    pydecomp-pddd-solve = NaivePyDECOMP.cli.pddd_cli:main
